experimentos/experimento_scrum51/logistica/k8s/api-logistica-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: api-logistica
  name: api-logistica
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api-logistica
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: api-logistica
    spec:
      imagePullSecrets:
        - name: gcr-secret
      containers:
        - env:
            - name: PULSAR_SERVICE_URL
              value: "pulsar://pulsar.default.svc.cluster.local:6650"
            - name: TOPIC_COMANDOS
              value: persistent://public/default/comando_calculo_rutas
            - name: TOPIC_EVENTOS
              value: persistent://public/default/evento_ruta_calculada
          image: us-central1-docker.pkg.dev/appnomonoliticas-452202/repositorio-imagenes-docker/api-logistica:latest
          name: api-logistica
          ports:
            - containerPort: 5000
              protocol: TCP
      restartPolicy: Always
