experimentos/experimento_scrum51/logistica/k8s/pulsar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: pulsar
  name: pulsar
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pulsar
  template:
    metadata:
      annotations:
        kompose.cmd: kompose --file docker-compose.yml convert
        kompose.version: 1.35.0 (HEAD)
      labels:
        io.kompose.service: pulsar
    spec:
      containers:
        - args:
            - bin/pulsar
            - standalone
          image: apachepulsar/pulsar:latest
          name: pulsar
          ports:
            - containerPort: 6650
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
