experimentos/experimento_scrum51/logistica/k8s/api_logistica-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: api-logistica
  name: api-logistica
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5000
  selector:
    io.kompose.service: api-logistica
