experimentos/experimento_scrum51/logistica/k8s/gestor_entregas-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose --file docker-compose.yml convert
    kompose.version: 1.35.0 (HEAD)
  labels:
    io.kompose.service: gestor-entregas
  name: gestor-entregas
spec:
  ports:
    - name: "6650"
      port: 6650
      targetPort: 6650
  selector:
    io.kompose.service: gestor-entregas
